# GigaVault

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  gigavault.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_gigavault.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: spawn_agent.example.yml
docs/: api.md  architecture.md  quickstart.md
examples/: basic_monitoring.py  custom_alerts.py  wallet_graph.py
spawn_agent/: __init__.py
spawn_agent/alerts/: __init__.py  base.py  discord.py  dispatcher.py  telegram.py  webhook.py
spawn_agent/analysis/: __init__.py  anomaly.py  cluster.py  graph.py  patterns.py
spawn_agent/cli/: __init__.py  commands.py
spawn_agent/core/: __init__.py  agent.py  pipeline.py  process.py  supervisor.py
spawn_agent/monitors/: __init__.py  base.py  contract.py  dex.py  mempool.py  wallet.py
spawn_agent/providers/: __init__.py  rpc.py  websocket.py
spawn_agent/utils/: __init__.py  config.py  logging.py  types.py
tests/: __init__.py  conftest.py  test_agent.py  test_alerts.py  test_anomaly.py  test_config.py  test_graph.py  test_patterns.py  test_pipeline.py  test_supervisor.py
